@@ -2,7 +2,7 @@
 #define SCMMANAGER_H
 
 #include "SourceControl.h"
-#include "../Project.h"
+#include "Project.h"
 
 SourceControl *	GetSCM(const scm_t &type);
 scm_t			DetectSCM(const char *path);
