@@ -26,3 +26,5 @@ Removed the unnecessary quit button from start window
 Added a MIME sniffer rule to the Paladin project type to work around another MIME bug in Haiku
 Fixed a bug with duplication of local include paths
 Opening a project from Terminal (like "Paladin myproject") now doesn't need the extension and works faster in some cases
+Made some small fixes to the makefile generator
+A project's directory is now implicitly included in the list of include paths during builds
